--- a/m.skins/default/css/marchive.css
+++ b/m.skins/default/css/marchive.css
@@ -1,5 +1,5 @@
 @charset "utf-8";
-/* Mobile XE (/modules/resource/m.skins/default/) */
+/* Mobile XE (/modules/archive/m.skins/default/) */
 body{margin:0;background:#fff;color:#000;word-wrap:break-word}
 body,input,textarea,select,button,table{font-family:Tahoma,Geneva,sans-serif}
 img{border:0}
